Update nav for mobile browsers

--- a/source/_partials/guide_navbar.html
+++ b/source/_partials/guide_navbar.html
@@ -1,4 +1,4 @@
-<div class="col-md-2 manual-toc hidden-s">
+<div class="col-md-2 manual-toc">
   <ul id="manual-toc" class="manual-toc">
     <h3 style="font-weight:bold;font-family:Avenir-Light;padding:0px 0px 10px 30px;">{{ page.title }}</h3>
     {% for item in page.pagination.items %}
