--- a/source/_views/guide.html
+++ b/source/_views/guide.html
@@ -61,7 +61,7 @@
           <ul class="pagination" style="float:right;"><li><a href="/docs/guides/{{ page.nexturl }}"><span class="terminus-pager-rsaquo">&rsaquo;</span> Continue</a></li></ul>
         {% endif %}
         {% if page.previousurl %}
-          <ul class="pagination" style="float:left;"><li><a href="/docs/guides/{{ page.previousurl }}"><span class="terminus-pager-lsaquo">&lsaquo;</span> Back</a></li></ul>
+          <ul class="pagination" style="float:left;"><li><a href="/docs/guides/{{ page.previousurl }}"><span class="terminus-pager-lsaquo">&lsaquo;</span> Previous</a></li></ul>
         {% endif %}
 
       </div>
