Add color to pager

--- a/source/_views/guide.html
+++ b/source/_views/guide.html
@@ -58,10 +58,10 @@
       <div class="terminus-pager">
         <hr>
         {% if page.nexturl %}
-          <ul class="pagination" style="float:right;"><li><a href="/docs/guides/{{ page.nexturl }}"><span class="terminus-pager-rsaquo">&rsaquo;</span> Continue</a></li></ul>
+          <ul class="pagination pager-guides" style="float:right;"><li><a href="/docs/guides/{{ page.nexturl }}"><span class="terminus-pager-rsaquo">&rsaquo;</span> Continue</a></li></ul>
         {% endif %}
         {% if page.previousurl %}
-          <ul class="pagination" style="float:left;"><li><a href="/docs/guides/{{ page.previousurl }}"><span class="terminus-pager-lsaquo">&lsaquo;</span> Previous</a></li></ul>
+          <ul class="pagination pager-guides" style="float:left;"><li><a href="/docs/guides/{{ page.previousurl }}"><span class="terminus-pager-lsaquo">&lsaquo;</span> Previous</a></li></ul>
         {% endif %}
 
       </div>
