CSS tweaks, add time to complete on 1st page, general copy edits

--- a/source/_partials/guide_navbar.html
+++ b/source/_partials/guide_navbar.html
@@ -1,5 +1,5 @@
-<div class="col-md-2 manual-toc">
-  <ul id="manual-toc" class="manual-toc">
+<div class="col-md-2 manual-guide-toc">
+  <ul id="manual-guide-toc" class="manual-guide-toc">
     <h3 style="font-weight:bold;font-family:Avenir-Light;padding:0px 0px 10px 30px;">{{ page.title }}</h3>
     {% for item in page.pagination.items %}
       <li><a id="docs-guides-{{ item.anchorid }}" href="{{ item.url }}">{{ item.subtitle }}</a></li>
