--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -203,7 +203,7 @@ terminusCompareApp.filter('search', function() {
 <div class="navbar navbar-fixed-top pio-docs-nav" role="navigation">
         <div class="navbar-header">
             <!-- Nav Collapse button -->
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <i class="fa fa-bars"></i>
             </button>
