Fix clickable cta on home page

--- a/source/docs.html
+++ b/source/docs.html
@@ -20,12 +20,12 @@ ul.pio-breadcrumb {
 <h1 class="title">Documentation Topics</h1>
 <div class="row mb-20">
   <div class="col-md-12">
-    <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started/">
+    <a class="topic-info-link" href="/docs/guides/getting-started/">
     <div class="guide-cta-landing" style="padding:25px!important;">
       <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
-      <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</a></p>
+      <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</p>
     </div>
-    </a>
+  </a>
   </div>
 </div>
 
