add trailing slash to internal links in footer

--- a/source/_partials/footer_content.html
+++ b/source/_partials/footer_content.html
@@ -20,7 +20,7 @@
 
           <div class="container container-footer-section">
 
-            <a href="/docs" class="footer-logo-container"><img alt="Pantheon" src="/source/docs/assets/images/pantheon-logo-symbol.svg" class="footer-logo"></a>
+            <a href="/docs/" class="footer-logo-container"><img alt="Pantheon" src="/source/docs/assets/images/pantheon-logo-symbol.svg" class="footer-logo"></a>
 
             <div class="row footer-menu-items">
               <div class="col-xs-6 col-sm-3">
@@ -28,16 +28,16 @@
 
                 <ul class="menu">
                   <li class="first leaf menu-mlid-1147">
-                    <a href="/docs/get-started">Get Started </a>
+                    <a href="/docs/get-started/">Get Started </a>
                   </li>
                   <li class="leaf menu-mlid-1148">
-                    <a href="/docs/develop">Develop</a>
+                    <a href="/docs/develop/">Develop</a>
                   </li>
                   <li class="leaf menu-mlid-1149">
-                    <a href="/docs/go-live">Go Live</a>
+                    <a href="/docs/go-live/">Go Live</a>
                   </li>
                   <li class="leaf menu-mlid-1162">
-                    <a href="/docs/platform">Explore Platform Architecture</a>
+                    <a href="/docs/platform/">Explore Platform Architecture</a>
                   </li>
                 </ul>
 
@@ -45,16 +45,16 @@
               <div class="col-xs-6 col-sm-3 col-no-title">
                 <ul class="menu">
                   <li class="first leaf menu-mlid-1147">
-                    <a href="/docs/automate">Automate & Integrate</a>
+                    <a href="/docs/automate/">Automate & Integrate</a>
                   </li>
                   <li class="leaf menu-mlid-1148">
-                    <a href="/docs/performance">Optimize Performance</a>
+                    <a href="/docs/performance/">Optimize Performance</a>
                   </li>
                   <li class="leaf menu-mlid-1149">
-                    <a href="/docs/manage">Manage Teams & Organizations</a>
+                    <a href="/docs/manage/">Manage Teams & Organizations</a>
                   </li>
                   <li class="leaf menu-mlid-1162">
-                    <a href="/docs/troubleshoot">Troubleshoot</a>
+                    <a href="/docs/troubleshoot/">Troubleshoot</a>
                   </li>
                 </ul>
               </div>
@@ -80,7 +80,7 @@
                     <a href="http://status.pantheon.io/">Status</a>
                   </li>
                   <li class="last leaf menu-mlid-1154">
-                    <a href="/docs/getting-support">Support</a>
+                    <a href="/docs/getting-support/">Support</a>
                   </li>
                 </ul>
 
@@ -92,16 +92,16 @@
                 <ul class="menu">
                   <li class="first leaf menu-mlid-1142">
 
-                    <a href="/docs/code-of-conduct">Code of Conduct</a>
+                    <a href="/docs/code-of-conduct/">Code of Conduct</a>
                   </li>
                   <li class="leaf menu-mlid-1188">
-                    <a href="/docs/contributors">Contributors</a>
+                    <a href="/docs/contributors/">Contributors</a>
                   </li>
                   <li class="leaf menu-mlid-1143">
-                    <a href="/docs/power-users">Community and Power Users Group</a>
+                    <a href="/docs/power-users/">Community and Power Users Group</a>
                   </li>
                   <li class="last leaf menu-mlid-1145">
-                    <a href="/docs/contribute">Learn to Contribute</a>
+                    <a href="/docs/contribute/">Learn to Contribute</a>
                   </li>
                 </ul>
 
