add noindex to contributors pages

--- a/source/_views/contrib.html
+++ b/source/_views/contrib.html
@@ -3,6 +3,10 @@
 
 <html itemscope itemtype="http://schema.org/Article">
 <head>
+
+    <!-- Asks bots not to index  -->
+    <meta name="robots" content="noindex, nofollow">
+
     <!-- Quickie redirection to https and pantheon.io -->
     <script type="text/javascript">
   if (window.location.hostname == 'localhost' ||
