add twitter card metadata to default view

--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -40,6 +40,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="{{ site.site_url}}{{ page.url }}/" />
 
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@getpantheon" />
+    <meta property="og:description" content="{{ page.description }}" />
+
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{ page.title}}">
     <meta itemprop="description" content="{{ page.description }}">
