standardize twitter card img

--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -54,7 +54,7 @@
     {% endif %}{% endfor %}{% endif %}{% endif %}
 
     <!-- Twitter summary card with large image must be at least 280x150px -->
-    <meta name="twitter:image:src" content="{{ page.image }}">
+    <meta name="twitter:image" content="https://pantheon.io/sites/default/files/drupal-wordpress-hosting.png" />
     <!-- Open Graph data -->
     <meta property="og:title" content="{{ page.title}}" />
     <meta property="og:type" content="article" />
