Add link to Getting Started Guide w/new label in nav bar

--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -297,6 +297,7 @@ terminusCompareApp.filter('search', function() {
                   <div class="row sub-menu-bottom">
                       <div class="col-xs-12">
                         <li><a id="changelogs" href="/docs/changelog">Changelog</a></li>
+                        <li><a id="terminus" href="/docs/guides/getting-started">Getting Started Guide <span class="label label-info">NEW</span></a></li>
                         <li><a id="terminus" href="/docs/terminus">Terminus Manual</a></li>
                       </div>
 
