Use absolute path for meta image tags

--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -45,14 +45,14 @@
 
     {% if page.image %}
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image" content="/docs/assets/images/{{ page.image }}.png" />
-    <meta itemprop="image" content="/docs/assets/images/{{ page.image }}.png">
-    <meta name="twitter:image" content="/docs/assets/images/{{ page.image }}.png" />
+    <meta property="og:image" content="https://pantheon.io/docs/assets/images/{{ page.image }}.png" />
+    <meta itemprop="image" content="https://pantheon.io/docs/assets/images/{{ page.image }}.png">
+    <meta name="twitter:image" content="https://pantheon.io/docs/assets/images/{{ page.image }}.png" />
     {% else %}
     <meta name="twitter:card" content="summary">
-    <meta property="og:image" content="/docs/assets/images/default-thumb.png" />
-    <meta itemprop="image" content="/docs/assets/images/default-thumb.png">
-    <meta name="twitter:image" content="/docs/assets/images/default-thumb.png" />
+    <meta property="og:image" content="https://pantheon.io/docs/assets/images/default-thumb.png" />
+    <meta itemprop="image" content="https://pantheon.io/docs/assets/images/default-thumb.png">
+    <meta name="twitter:image" content="https://pantheon.io/docs/assets/images/default-thumb.png" />
     {% endif %}
 
     <!-- Twitter Card data -->
