update status links

--- a/source/_partials/footer_content.html
+++ b/source/_partials/footer_content.html
@@ -77,7 +77,7 @@
                     <a href="https://pantheon.io/agencies/agency-finder">Find an Agency</a>
                   </li>
                   <li class="leaf menu-mlid-1153">
-                    <a href="http://status.pantheon.io/">Status</a>
+                    <a href="https://status.pantheon.io/">Status</a>
                   </li>
                   <li class="last leaf menu-mlid-1154">
                     <a href="/docs/getting-support/">Support</a>
