--- a/source/_views/doc.html
+++ b/source/_views/doc.html
@@ -38,7 +38,7 @@
               return t;
           }(document, "script", "twitter-wjs"));
         </script>
-        <a class="twitter-share-button" href="https://pantheon.io{{ page.url }}/intent/tweet?text=%40getpantheon%20doc%3A%20{{ page.title }}"></a>
+        <a class="twitter-share-button" href="https://pantheon.io{{ page.url }}?text=%40getpantheon%20doc%3A%20{{ page.title|url_encode }}"></a>
         <script async defer src="https://slackin.pantheon.io/slackin.js"></script><br>
 
     <div style="margin-top:15px;margin-bottom:45px;">
