Fix broken svgs from 5cf5ed5

--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -212,7 +212,7 @@ terminusCompareApp.filter('search', function() {
                 <a class="" href="https://pantheon.io/">
                    <span class="invisible" style="display:none;"></span>
                   <?xml version="1.0" encoding="UTF-8"?>
-                  <svg width="206px" height="65px" viewBox="0 0 206 65" version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
+                  <svg width="206px" height="65px" viewBox="0 0 206 65" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                       <!-- Generator: Sketch 41.2 (35397) - https://www.sketchapp.com -->
                       <title>Pantheon Logo</title>
                       <desc>Created with Sketch.</desc>
