--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -10,6 +10,7 @@
   <script src="//www.google-analytics.com/analytics.js"></script>
   <script src="/docs/assets/js/node_modules/clipboard/dist/clipboard.min.js"></script>
   <script src="/docs/assets/js/main.js?v=2.3.0"></script>
+  <script src="https://cdn.optimizely.com/js/2907671447.js"></script>
 
   <script>
   $(document).ready(function() {
