--- a/source/docs.html
+++ b/source/docs.html
@@ -158,18 +158,18 @@ ul.pio-breadcrumb {
 <div class="row mb-70">
   <div class="col-md-12">
     <ul class="top-docs top-docs-3col">
-      <li><a href="/docs/terminus">Terminus Manual</a></li>
-      <li><a href="/docs/guides/cloudflare-enable-https">Adding HTTPS For Free With Cloudflare</a></li>
-      <li><a href="/docs/kill-mysql-queries">Identify and Kill MySQL Queries</a></li>
-      <li><a href="/docs/domains">Domains and DNS</a></li>
-      <li><a href="/docs/settings-php">Configuring settings.php</a></li>
-      <li><a href="/docs/git-faq">Git FAQs</a></li>
-      <li><a href="/docs/ssh-keys">Generating and Adding SSH Keys</a></li>
-      <li><a href="/docs/redirects">Redirect Incoming Requests</a></li>
-      <li><a href="/docs/pantheon-workflow">Using the Pantheon Workflow</a></li>
-      <li><a href="/docs/redis">Redis as a Caching Backend</a></li>
-      <li><a href="/docs/enable-https">Enable Secure HTTPS Communication</a></li>
-      <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
+      <li><a href="/docs/terminus/">Terminus Manual</a></li>
+      <li><a href="/docs/guides/getting-started/">Getting Started Guide</a></li>
+      <li><a href="/docs/platform-considerations/">Platform Considerations</a></li>
+      <li><a href="/docs/domains/">Domains and DNS</a></li>
+      <li><a href="/docs/pantheon-workflow/">Using the Pantheon Workflow</a></li>
+      <li><a href="/docs/kill-mysql-queries/">Identify and Kill MySQL Queries</a></li>
+      <li><a href="/docs/redirects/">Redirect Incoming Requests</a></li>
+      <li><a href="/docs/settings-php/">Configuring settings.php</a></li>
+      <li><a href="/docs/git-faq/">Git FAQs</a></li>
+      <li><a href="/docs/ssh-keys/">Generating and Adding SSH Keys</a></li>
+      <li><a href="/docs/redis/">Redis as a Caching Backend</a></li>
+      <li><a href="/docs/drush/">Drupal Drush Command-Line Utility</a></li>
     </ul>
   </div>
 </div>
