Add toc to domains and https in going live guide, make toc responsive instead of fixed

--- a/source/_views/guide.html
+++ b/source/_views/guide.html
@@ -71,13 +71,11 @@
           </div>
         </div>
         {% if page.guidetoc %}
-        <div class="col-md-3">
-          <div style="" class="pio-docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
+          <div style="" class="col-md-3 pio-docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
             <div id="toc">
               <h4>Contents</h4>
             </div>
           </div>
-        </div>
         {% endif %}
       </div>
     </div>
