--- a/source/_views/terminuspage.html
+++ b/source/_views/terminuspage.html
@@ -60,8 +60,7 @@
       {{ page.blocks.content|raw }}
   </div>
   {% if page.terminustoc %}
-  <div class="col-md-3">
-    <div style="" class="pio-docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
+    <div style="" class="col-md-3 pio-docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
         <div id="toc">
             <h4>Contents</h4>
         </div>
