--- a/source/_partials/sidebarnav.html
+++ b/source/_partials/sidebarnav.html
@@ -1,4 +1,4 @@
-<div class="pio-docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
+<div class="col-md-3 pio-docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
     <div id="toc">
         <h4>Contents</h4>
     </div>
