Align terminus layout with guide layout, update deployment script, css tweaks for moving the survey to the footer, show survey on last page of guides

--- a/source/_partials/terminus_navbar.html
+++ b/source/_partials/terminus_navbar.html
@@ -1,6 +1,11 @@
-<div class="col-md-2 manual-toc hidden-s">
-  <ul id="manual-toc" class="manual-toc">
-    <h3 style="font-weight:bold;font-family:Avenir-Light;padding:0px 0px 10px 30px;">Terminus Manual</h3>
+<div class="col-md-3 manual-toc" role="navigation">
+  <button type="button" style="padding:0px;margin-top:-1px;margin-right:20px;"class="navbar-toggle" data-toggle="collapse" data-target="#guide-collapse">
+    <span class="sr-only">Toggle navigation</span>
+    <i class="fa fa-bars"></i>
+  </button>
+  <h3 style="font-weight:bold;font-family:Avenir-Light;padding:0px 0px 10px 40px;">Terminus Manual</h3>
+  <div class="collapse navbar-collapse" style="margin-right:0px;padding-left:0px;padding-right:0px;"id="guide-collapse">
+    <ul id="manual-toc" class="manual-toc">
     <li><a id="docs-terminus" href="/docs/terminus">Get Started</a></li>
     <li><a id="docs-terminus-install" href="/docs/terminus/install">Install</a></li>
     <li><a id="docs-terminus-examples" href="/docs/terminus/examples">Example Usage</a></li>
@@ -12,4 +17,5 @@
     </ul>
     <li><a id="docs-terminus-updates" href="/docs/terminus/updates">Version Updates</a></li>
   </ul>
+</div>
 </div>
