--- a/source/_views/doc.html
+++ b/source/_views/doc.html
@@ -64,9 +64,14 @@
       </div>
     </div>
       {% include ("sidebarnav.html") %}
-    <div class="col-md-12">
-      <iframe style="theme-progress-bar:#fff!important;" frameborder="0" width="100%" height="300px" src="https://www.getfeedback.com/r/12z1fMzn?page={{page.url}}&topic={{page.categories|last}}"></iframe>
-    </div>
   </div>
 </div>
+<div class="container-fluid">
+  <div class="row">
+  <div class="survey-pio-outter col-md-12">
+    <iframe style="width:100%;min-height:300px;" frameborder="0" src="https://www.getfeedback.com/r/12z1fMzn?page={{page.url}}&topic={{page.categories|last}}"></iframe>
+  </div>
+  </div>
+</div>
+
 {% endblock %}
