Align layouts for terminus manual and guides, use same pagers in changelogs, fix bootstrap grid throughout

--- a/source/_partials/terminus_navbar.html
+++ b/source/_partials/terminus_navbar.html
@@ -1,17 +1,17 @@
-<div class="col-md-3 manual-toc" role="navigation">
+<div class="col-md-3 manual-guide-toc" role="navigation">
   <button type="button" style="padding:0px;margin-top:-1px;margin-right:20px;"class="navbar-toggle" data-toggle="collapse" data-target="#guide-collapse">
     <span class="sr-only">Toggle navigation</span>
     <i class="fa fa-bars"></i>
   </button>
-  <h3 style="font-weight:bold;font-family:Avenir-Light;padding:0px 0px 10px 40px;">Terminus Manual</h3>
+  <h3 style="font-size: 24px;margin-top: 40px;font-family:Avenir-Light;padding:0px 0px 10px 40px;">Terminus Manual</h3>
   <div class="collapse navbar-collapse" style="margin-right:0px;padding-left:0px;padding-right:0px;"id="guide-collapse">
-    <ul id="manual-toc" class="manual-toc">
+    <ul id="manual-guide-toc" class="manual-guide-toc">
     <li><a id="docs-terminus" href="/docs/terminus">Get Started</a></li>
     <li><a id="docs-terminus-install" href="/docs/terminus/install">Install</a></li>
     <li><a id="docs-terminus-examples" href="/docs/terminus/examples">Example Usage</a></li>
     <li><a id="docs-terminus-commands" href="/docs/terminus/commands">Commands</a></li>
     <li><a id="docs-terminus-plugins" href="/docs/terminus/plugins">Extend with Plugins</a></li>
-    <ul id="manual-toc" class="manual-toc child">
+    <ul id="manual-guide-toc" class="manual-guide-toc child">
       <li><a id="docs-terminus-directory" href="/docs/terminus/plugins/directory">Directory</a></li>
       <li><a id="docs-terminus-create" href="/docs/terminus/plugins/create">Create Plugins</a></li>
     </ul>
