--- a/source/_views/doc.html
+++ b/source/_views/doc.html
@@ -10,7 +10,7 @@
       </div>
     </div>
   {% endif %}
-  <div class="row">
+  <div class="row doc-content-well">
     <div id="doc" class="article col-md-9 md-70">
       {% if page.dnsprovider %}
       <div style="row">
