--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -7,7 +7,7 @@
 {% if page.terminuspage %}
   <script type="text/javascript">
     function setActivetrail() {
-      aaObj = document.getElementById('manual-toc').getElementsByTagName('a');
+      aaObj = document.getElementById('manual-guide-toc').getElementsByTagName('a');
       for(i=0;i<aaObj.length;i++) {
         if(document.location.href.indexOf(aaObj[i].href)>=0 ){
           aaObj[i].className='active-trail';
