--- a/source/_views/terminuspage.html
+++ b/source/_views/terminuspage.html
@@ -2,7 +2,7 @@
 {% block content_wrapper %}
   <div class="container-fluid">
     <div class="row">
-      <div class="row col-md-12 guide-nav">
+      <div class="row col-md-12 guide-nav manual-guide-toc-well">
         {% include("terminus_navbar.html") %}
         <div class="col-md-9 guide-doc-body">
           {% if page.terminustoc %}
