--- a/source/_partials/search_box.html
+++ b/source/_partials/search_box.html
@@ -1,6 +1,6 @@
 <script>
   (function() {
-    var cx = '003083871467663611719:moj1j4obfwm';
+    var cx = '003083871467663611719:iwjn-dav4gm';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
