--- a/source/_views/guide.html
+++ b/source/_views/guide.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="row col-md-12 guide-nav manual-guide-toc-well">
         {% include("guide_navbar.html") %}
-        <div class="col-md-9 guide-doc-body">
+        <div id="doc" class="col-md-9 guide-doc-body">
           {% if page.guidetoc %}
           <div class="row guide-content-well">
           <div class="col-xs-12 col-md-9">
