--- a/source/_views/video.html
+++ b/source/_views/video.html
@@ -2,7 +2,7 @@
 {% block content_wrapper %}
 <div class="container">
   <div class="row">
-    <div id="video" class="article col-md-9 mb-70">
+    <div id="doc video" class="article col-md-9 mb-70">
       <h1 style="margin-bottom:10px;margin-top:0px;"class="pio-docs-title">{{ page.title }}</h1>
       <p class="article-subhead">{{ page.description }}</p>
       <div class="share-buttons">
