--- a/source/_partials/search_box.html
+++ b/source/_partials/search_box.html
@@ -1,5 +1,17 @@
-<form id="searchform">
+<script>
+  (function() {
+    var cx = '003083871467663611719:moj1j4obfwm';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = '//cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+
+<form id="searchform" action="/docs/search" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded">
   <div>
-    <input type="search" placeholder="Search Pantheon Docs" id="docsearch" />
+    <input type="search" placeholder="Search Pantheon Documentation"value="" name="term" id="piodocsearch" autocomplete="on" />
   </div>
 </form>
