--- a/source/_partials/topics/go-live.html
+++ b/source/_partials/topics/go-live.html
@@ -4,11 +4,11 @@
         <div class="col-md-6 hero-video__video">
           <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
         </div>
-        <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started/">
+        <a class="topic-info-link" style="display:block!important;" href="/docs/guides/launch/">
         <div class="col-md-6">
           <div class="guide-cta-landing" style="padding:25px!important;display:block">
-            <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
-            <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</p>
+            <h1 class="hero-video__guide-cta-title">Launch Essentials Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+            <p class="hero-video__guide-cta-subtitle">Ready to launch like a pro? Check out our step-by-step guide to see how it's done.</p>
           </div>
         </div>
       </a>
